--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,4 +10,6 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+     display: block;
+    margin: 0px;
 }
